--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "foundation-sites": "^6.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-donut-chart": "^1.1.8",
     "react-foundation": "^0.9.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
