--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-dom": "^17.0.1",
     "react-donut-chart": "^1.1.8",
     "react-foundation": "^0.9.6",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
